# ACalORAT

./: .main.py.un~  ACalOrAT.py  AnaORM.py  LICENSE  ORMH.npy  ORMV.npy  README.md  di_dk.npy  main.py  methods.py  numerical.py  plot_utils.py  pyproject.toml  read.py
Results Notebooks/: CFD_dip_ALBAII.ipynb  CFD_feedback_ALBAII.ipynb  CFD_quad_ALBAII.ipynb  Quadrupoles_ALBAI.ipynb  Quadrupoles_ALBAII.ipynb  Quadrupoles_ALBAI_no_sext.ipynb  Quadrupoles_ALBAI_selfconsistency.ipynb  dORM_dEnergy_ALBAII.ipynb
Results Notebooks/.ipynb_checkpoints/: CFD_feedback_ALBAII-checkpoint.ipynb  (+5 more)
cor_SVD_old/: dFreq_dCFD.npy  dKicksH_dCFD.npy
docs/: ACalORAT.html  index.html  search.js
full_SVD/: dKicksH_dCFD.npy
misc/: dispersions.txt  log_cor_SVD.txt
scripts/: ALBAII_CFD.py  ALBAII_CFD_NO_FEEDBACK.py  ALBAII_CFD_NO_FEEDBACK_NO_SEXTUPOLES.py  ALBAII_CFD_NO_FEEDBACK_ONLY_DIPOLES.py  ALBAII_CFD_NO_FEEDBACK_ONLY_DIPOLES_dispersion_test.py  ALBAII_CFD_NO_FEEDBACK_split.py  ALBAII_CFD_ONLY_QUADS.py  ALBAII_CFD_no_energy_shift.py  ALBAII_CFD_no_sext.py  ALBAII_CFD_no_sext_FULL_JACOBIAN.py  ALBAII_CFD_no_sext_intercalculations.py  ALBAII_CFD_no_sext_no_ang_FULL_JACOBIAN.py  ALBAII_CFD_no_sext_pure.py  ALBAII_CFD_no_sext_pure_tests.py  ALBAII_CFD_sext_FULL_JACOBIAN .py  ALBAII_CFD_sext_FULL_JACOBIAN.py  ALBAII_CFD_vertical.py  ALBAII_Dispersion_test.py  ALBAII_ORM.py  ALBAII_ORM_slicing_test.py  ALBAII_corrector_dispersion_test.py  ALBAII_kickers.py  ALBAI_ORM.py  Dispersion_test.py  Dispersion_testA1.py  Dispersion_test_NO_SEXT.py  general_numerical.py  sanity_check.py
(+146 files in other folders)
